style.scss
---
---

//
// IMPORTS
//

@import "reset";
@import "variables";
// Syntax highlighting @import is at the bottom of this file

/**************/
/* BASE RULES */
/**************/

html {
	font-size: 100%;
}

body {
	font-family: $font;
	background: $white;
	color: $darkGray;
	
	@include dark-mode {
		background: $black;
		color: $lightGray;
	}
}

a {
	color: $blue;
	&:hover, &:active {
		color: $blueLight;
	}
}

.begender, .header, .entry, article > nav, article > footer {
	max-width: 700px;
	margin: auto;
}

.begend {
	background-color: $topw;
	border-top: 1px solid $blue;
	border-bottom: 1px solid $blue;
	
	@include dark-mode {
		background-color: $topb;
	}
}

.begender {
	p {
		font-size: 0.9em;
		line-height: 1.2em;
		color: $blue;
		margin: 5px;
	}
	a {
		text-decoration: underline;
	}
}

.avatar {
	float: left;
	width: 50px;
	height: 50px;
	margin: 0px 5px;
	img {
		border-radius: 5px;
	}
}

.topright {
	float: right;
	margin: 0px 5px;
	a {
		text-decoration: none;
	}
}

.center {
	text-align: center;
}

h1, h2, h3, h4, h5, h6 {
	color: $darkerGray;
	font-weight: 400;
	line-height: 1.2em;
	@include dark-mode {
		color: $lighterGray;
	}
}

h1 {
	font-size: 2.5em;
	margin: 1em 0 0.5em;
}

h2 {
	font-size: 1.8em;
	margin: 0.8em 0 0.2em;
}

h3 {
	font-size: 1.4em;
	margin: 0.5em 0 0.1em;
}

h4 {
	font-size: 1.2em;
	color: $gray;
	margin: 0.3em 0 0.1em;
}

.header {
	text-align: center;
	color: $white;
	a {
		text-decoration: none;
		color: $white;
	}
	h1, h2, h3 {
		text-shadow: 2px 2px 4px $black;
	}
}

.headerblack {
	color: $black;
	@include dark-mode {
		color: $white;
	}
	a {
		color: $black;
		@include dark-mode {
			color: $white;
		}
	}
	h1, h2, h3 {
		text-shadow: 1px 1px 2px $black;
		@include dark-mode {
			text-shadow: 1px 1px 2px $white;
		}
	}
}

header {
	padding: 1em 0;
}

article > nav {
	padding: 0.5em;
	a {
		text-decoration: none;
	}
}

.tags {
	text-align: center;
}

.entry {
	padding: 0 5px 10px;
	a {
		text-decoration: none;
		background-color: $topw;
		@include dark-mode {
			background-color: $topb;
		}
	}
	p {
		padding: 0.8em 0 0.2em;
	}
	img + em {
		color: $newgray;
		display: block;
		text-align: center;
	}
}

.date {
	color: $newgray;
	font-size: 0.8em;
	font-style: italic;
}

ul, ol {
	margin: 15px 0;
	padding-left: 30px;
}

ul {
	list-style-type: disc;
}

ol {
	list-style-type: decimal;
}

ol ul, ul ol, ul ul, ol ol {
	margin: 0;
}

ul ul, ol ul {
	list-style-type: circle;
}

em, i {
	font-style: italic;
}

strong, b, .bold {
	font-weight: bold;
}

sup {
	vertical-align: super;
	font-size: smaller;
}

.footnotes {
	border-top: 1px solid $gray;
}

blockquote {
	margin: 1em;
	border: 2px solid $gray;
	padding: 0.1em 1em;
	color: $gray;
	font-family: $fontserif;
	font-style: italic;
	transform: rotate(-2deg);
}

img {
	max-width: 100%;
	@include dark-mode {
		opacity: .75;
		transition: opacity .5s ease-in-out;
		&:hover { opacity: 1; }
	}
}

// Specify the color of the selection
::-moz-selection {
	color: $black;
	background: $lightGray;
}
::selection {
	color: $black;
	background: $lightGray;
}

//Fixes for responsive video embed
//https://avexdesigns.com/responsive-youtube-embed
.embed-container {
	position: relative;
	padding-bottom: 56.25%;
	padding-top: 30px; height: 0; overflow: hidden;
}

.embed-container iframe,
.embed-container object,
.embed-container embed {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}

#search-container {
	padding: 5px 0px;
}

#search-input {
	background-color: $lighterGray;
	border: 1px solid $lightGray;
	color: $darkGray;
	padding: 2px;
	font-size: 1.2em;
	margin: 0;
	width: inherit;
	@include dark-mode {
		background-color: $darkerGray;
		border: 1px solid $darkGray;
		color: $lightGray;
	}
}

#search-results {
	position: absolute;
	top: auto;
	z-index: 100;
	margin: 0;
	padding: 0px;
	list-style: none;
}

#search-results li {
	padding: 5px;
	background: $lighterGray;
	@include dark-mode {
		background: $darkerGray;
	}
	@include mobile {
		text-align: left;
	}
}

::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
  color: $gray;
  opacity: 1; /* Firefox */
}

:-ms-input-placeholder { /* Internet Explorer 10-11 */
  color: $gray;
}

::-ms-input-placeholder { /* Microsoft Edge */
  color: $gray;
}

.posts > .post {
	padding-bottom: 2em;
	border-bottom: 1px solid $lightGray;
}

.posts > .post:last-child {
	padding-bottom: 1em;
	border-bottom: none;
}

@import "highlights";

